[gd_scene load_steps=8 format=3 uid="uid://creiyraf2vk0q"]

[ext_resource type="Script" uid="uid://c8077kt23rwyr" path="res://entities/enemies/watcher/watcher.gd" id="1_watcher"]
[ext_resource type="AudioStream" uid="uid://575h8lm3fd21" path="res://assets/audio/IKAY CLOCKWORK.mp3" id="2_alert_audio"]
[ext_resource type="PackedScene" uid="uid://db7tdsjuo6gtb" path="res://assets/models/monsters/watching you from my yard.tscn" id="3_ar1c6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_body"]
radius = 0.4
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_watcher"]
albedo_color = Color(0.8, 0.2, 0.2, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_watcher"]
material = SubResource("StandardMaterial3D_watcher")
radius = 0.4
height = 1.8

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vision"]
height = 15.0

[node name="Watcher" type="CharacterBody3D"]
collision_mask = 3
script = ExtResource("1_watcher")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_body")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
visible = false
mesh = SubResource("CapsuleMesh_watcher")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="VisionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
collision_mask = 2

[node name="VisionCone" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -7.5)
shape = SubResource("CylinderShape3D_vision")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
target_position = Vector3(0, 0, -15)
collision_mask = 3
hit_from_inside = true

[node name="VisionLight" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
light_color = Color(1, 0.2, 0.2, 1)
light_energy = 8.0
light_indirect_energy = 2.0
light_volumetric_fog_energy = 3.0
shadow_enabled = true
shadow_bias = 0.1
shadow_normal_bias = 2.0
shadow_blur = 2.0
spot_range = 20.0
spot_attenuation = 0.5

[node name="AlertSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_alert_audio")
unit_size = 45.0
max_distance = 120.0

[node name="eye" parent="." instance=ExtResource("3_ar1c6")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.9, 0)
